added page number and export page chenge
