# lib/api-spec/openapi.yaml
@@ -679,6 +679,10 @@ components:
         createdAt:
           type: string
           format: date-time
+        permissions:
+          type: array
+          items:
+            type: string
       required: [id, username, isActive, createdAt]
 
     CreateUserRequest:
